@@ -15,6 +15,7 @@
       New default for Windows: emacsclient.
     - Added export support for DIN1505 style (based on patch 1874662).
     - Added support for PostgresSQL import/export (patch 3368760 by Fred Stevens).
+    - Added formatter "JournalAbbreviator" (patch 3013311 by Meigel).
     - Switched from PDFBox 0.7.3 to PDFBox 1.6.0.
 2.7.1
     - DocBook export format switched to 4.4 (based on patch 3313898).
